--- a/app/views/bugs/_bug_info.html.erb
+++ b/app/views/bugs/_bug_info.html.erb
@@ -1,5 +1,9 @@
 <table>
   <tr>
+    <td><strong>Title</strong></td>
+    <td><%= @bug.title %></td>
+  <tr>
+  <tr>
     <td><strong>Description</strong></td>
     <td><%= @bug.description %></td>
   <tr>
