--- a/app/views/bugs/_fields.html.erb
+++ b/app/views/bugs/_fields.html.erb
@@ -1,5 +1,9 @@
 <%= render 'shared/error_messages', :object => f.object %>
 <div class="field">
+  <%= f.label :title %><br />
+  <%= f.text_field :title %>
+</div>
+<div class="field">
   <%= f.label :description %><br />
   <%= f.text_field :description %>
 </div>
