Added some styling and navigation

--- a/app/views/bugs/_bug.html.erb
+++ b/app/views/bugs/_bug.html.erb
@@ -1,7 +1,9 @@
 <tr>
   <td><%= link_to bug.title, bug_path(bug) %></td>
+  <td><%= bug.description %></td>
   <td><%= bug.status %></td>
   <!--Update this to not query every row -->
   <% developer = Developer.find(bug.developer_id) %>
   <td><%= link_to developer.name, developer_path(developer) %></td>
+  <td><%= link_to "Delete", bug, :method => :delete %></td>
 </tr>
