Added more navigation and a few tests to exercise UI

--- a/app/views/bugs/_bug_info.html.erb
+++ b/app/views/bugs/_bug_info.html.erb
@@ -16,6 +16,4 @@
   </tr>
 </table>
 <br><br>
-<%= link_to "Edit Bug", edit_bug_path(@bug) %>
-<br><br>
-<%= link_to "Delete Bug", @bug, :method => :delete %>
+<%= link_to "Edit Bug", edit_bug_path(@bug) %> | <%= link_to "Delete Bug", @bug, :method => :delete %> | <%= link_to "Back to bug list", bugs_path() %>
