--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -6,9 +6,9 @@
     <td><%= @developer.name %></td>
   <tr>
 </table>
-<%= link_to "Edit", edit_developer_path(@developer) %> | <%= link_to "Delete", @developer, :method => :delete %> | <%= link_to "Back to developer list", developers_path() %>
-
-<br><br>Bugs assigned to <%= @developer.name %>
+<br>
+Bugs assigned to <%= @developer.name %>
+<br><br>
 <table class="bug" border="1">
   <tr>
     <th>Title</th>
@@ -21,4 +21,6 @@
     </tr>
   <% end %>
 </table>
+<br>
+<%= link_to "Edit", edit_developer_path(@developer) %> | <%= link_to "Delete", @developer, :method => :delete %> | <%= link_to "Back to developer list", developers_path() %>
 
