--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Bug Tracker Application</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
+  <%= javascript_include_tag "jquery", "jquery.validate.min", "application", "rails" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
